--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
   <meta charset="utf-8">
   <meta name="viewport"
     content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
-  <!-- <link rel="stylesheet" type="text/css" href="https://cdn.tiye.me/favored-fonts/main-fonts.css"> -->
+  <link rel="stylesheet" type="text/css" href="https://cdn.tiye.me/favored-fonts/main-fonts.css">
   <link rel="stylesheet" type="text/css" href="./assets/main.css">
 </head>
 
 <body>
 
   <canvas id="canvas-container"></canvas>
-  <script type="module" src="./src/main.mts"></script>
+  <script type="module" src="./main.mjs"></script>
+  <div class="app"></div>
 </body>
 
 </html>
